# abacus

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: Upload_to_S3.yaml  cicd.yaml
src/: db_connection_util.py  main.py
src/common/: flexible_etl.py
src/core/: structured_etl.py
src/functions/: func_calc_gross_interest_mtd.py  func_calc_grossinterest_mtd.py  func_calc_unwinding.py  func_calc_unwinding_mtd.py  func_cust_materiality_level.py  func_date_since_pd_ho2_cc.py  func_maxdpd_month.py  func_year_frac.py  no_dup_words.py
src/insert_atmp_t17/: calc_gca_value_refactored.py  calc_gross_interest_mtd_refactored.py  calc_grossinteres_mtd.py  calculate_atmp_cc_formulas.py  calculate_cc_dpd_ho.py  check_costumer_refactored.py  check_customer.py  check_product_type.py  commit_atmp17_into_t17.py  commit_eatmpt17_into_t17.py  insert_t01_customer.py  is_existing_customer.py  isexistingcustomer.py  (+1 more)
tests/: calc_gca_value_test.py  calculate_atmp_cc_formulas_test.py  calculate_cc_dpd_ho2_test.py  check_customer_test.py  check_product_type_test.py  commit_atmp_18_into_t18.py  isexistingcustomer_test.py  spark_session_fixture.py  test_calc_gca_value_refactored.py  test_calc_grossinteres_mtd_refactored.py  test_check_costumer_refactored.py  update_is_joint_test.py
tests_archived/: calc_gca_value_test.py  calc_grossinteres_mtd_test.py  calculate_atmp_cc_formulas_test.py  calculate_cc_dpd_ho2_test.py  calculate_cc_dpd_ho_test.py  check_customer_product_test.py  commit_atmp17_into_t17_test.py  commit_atmp_18_into_t18.py  load_prev_atmp_t17_test.py
(+21 files in other folders)
